deploy-kubernetes/deploy-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard-dev
  template:
    metadata:
      labels:
        app: dashboard-dev
    spec:
      containers:
      - name: dashboard
        image: ihubg.azurecr.io/crm-dashboard-dev:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:  # Correcta anidación aquí dentro del contenedor
          requests:
            memory: "512Mi"
          limits:
            memory: "1Gi"
      imagePullSecrets:
      - name: acr-secret
