deploy-kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: ihubg.azurecr.io/crm-dashboard:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:  # Correcta anidación aquí dentro del contenedor
          requests:
            memory: "1Gi"
          limits:
            memory: "2Gi"
      imagePullSecrets:
      - name: acr-secret
