deploy-kubernetes/service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: service-dashboard-dev
spec:
  type: LoadBalancer
  selector:
    app: dashboard-dev
  ports:
    - port: 80
      targetPort: 3000
