deploy-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-dashboard
spec:
  type: LoadBalancer
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 3000
